kano-apps (4.1.0-0) unstable; urgency=low

  * Added Songmaker app.
  * Move Files app to page 2

 -- Team Kano <dev@kano.me>  Mon, 10 Sep 2018 11:50:00 +0100

kano-apps (4.0.0-0) unstable; urgency=low

  * Fix support for Gtk packages included with Stretch.
  * Bump default browser scale factor to make touch easier
  * Add touch support for app grid

 -- Team Kano <dev@kano.me>  Mon, 23 Apr 2018 13:50:00 +0100

kano-apps (3.15.0-0) unstable; urgency=low

  * Fixed import of Python pam module when using the deb package

 -- Team Kano <dev@kano.me>  Wed, 28 Mar 2018 11:55:00 +0100

kano-apps (3.14.0-0) unstable; urgency=low

  * Applied changes from v3.9.2 es_AR backports to latest
  * Changed to use scratch2
  * Moved Internet app icon over KW on first Dashboard page
  * Added kano-start-browser script

 -- Team Kano <dev@kano.me>  Mon, 27 Nov 2017 14:52:00 +0100

kano-apps (3.12.1-0) unstable; urgency=low

  * Replaced Dashboard position of Internet with Files

 -- Team Kano <dev@kano.me>  Mon, 25 Sep 2017 15:27:00 +0000

kano-apps (3.9.2-0) unstable; urgency=low

  * Added Argentinian Spanish .desktop translations for Apps & Files (backport)

 -- Team Kano <dev@kano.me>  Mon, 9 Oct 2017 13:58:00 +0000

kano-apps (2.2.0-1) unstable; urgency=low

  * New versioning convention

 -- Team Kano <dev@kano.me>  Mon, 12 Oct 2015 15:58:00 +0000

kano-apps (2.0-1) unstable; urgency=low

  * Adding new subcommand to kano-apps (icon-tutorial).

 -- Team Kano <dev@kano.me>  Thu, 16 Nov 2015 15:05:00 +0000

kano-apps (1.3-1) unstable; urgency=low

  * Plenty of refactoring
  * Added new parameter: check-for-updates

 -- Team Kano <dev@kano.me>  Tue, 25 Nov 2014 17:05:00 +0000

kano-apps (1.1-1) unstable; urgency=low

  * Prerelease review

 -- Team Kano <dev@kano.me>  Tue, 17 Jun 2014 19:55:51 +0000

kano-apps (1.0-3) unstable; urgency=low

  * Renamed package from Extras to Apps

 -- Team Kano <dev@kano.me>  Tue, 8 Apr 2014 15:18:11 +0000
